manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciao
  namespace: <namespace_name>
  labels:
    app.kubernetes.io/name: ciao
    app.kubernetes.io/version: "1.6.12"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ciao
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ciao
    spec:
      containers:
        - name: ciao
          image: "brotandgames/ciao:1.6.12"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          # envFrom:
          #   - configMapRef:
          #       name: ciao
          volumeMounts:
            - name: sqlite
              mountPath: "/app/db/sqlite"
          livenessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Authorization
                  # Generate base64 encoded secret
                  # echo -n "Aladdin:OpenSesame" | base64
                  value: Basic QWxhZGRpbjpPcGVuU2VzYW1l
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 15
            failureThreshold: 4
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Authorization
                  # Generate base64 encoded secret
                  # echo -n "Aladdin:OpenSesame" | base64
                  value: Basic QWxhZGRpbjpPcGVuU2VzYW1l
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 15
            failureThreshold: 4
            successThreshold: 1
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: sqlite
          persistentVolumeClaim:
            claimName: ciao
