manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ciao
  namespace: <namespace_name>
  labels:
    app.kubernetes.io/name: ciao
spec:
  containers:
  - name: ciao
    image: "brotandgames/ciao:1.6.12"
    imagePullPolicy: Always
    ports:
    - name: http
      containerPort: 3000
      protocol: TCP
