manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ciao
  namespace: <namespace_name>
  labels:
    app.kubernetes.io/name: ciao
    app.kubernetes.io/version: "1.6.12"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: ciao
