manifests/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciao-ingress
  namespace: <namespace_name>
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    # Name of the cluster certificate issuer
    cert-manager.io/cluster-issuer: letsencrypt-http01
spec:
  rules:
    - host: <username>.dev.workshop.exanio.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ciao-svc
                port:
                  number: 80
  tls:
  - hosts: 
    # Hostname for which the certificate will be issued
    - <username>.dev.workshop.exanio.net
    # This secret will be created automatically from cert-manager
    secretName: ciao-tls-secret
